# dalle_inpainting_classification

./: .gitignore  README.md  base-dockerfile  pyproject.toml  service-dockerfile  test-dockerfile
.github/workflows/: deploy_microservice.yml  run_docker.yml  run_doctests.yml  run_test_docker.yml
src/: Copy_of_finetuning_torchvision_models_tutorial.ipynb  torchvision_train.py  train_val_split_file_copy.py
src/augment_images/: augment_images.py  augmentation_process.py  rotate_image.py
src/microservice/: image_classifier_service.py
test/: demo_test.py
