[tool.poetry]
name = "dalle-inpainting-classification"
version = "0.1.0"
description = ""
authors = ["Fabian Jetzinger <S2110595008@fhooe.at>"]
readme = "README.md"
packages = [{include = "dalle_inpainting_classification"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
